testdata/baselines/reference/tests_cases_compiler_inheritSameNamePrivatePropertiesFromDifferentOrigins.ts.ast
SourceFile
  ClassDeclaration
    Identifier: ' C'
    PropertyDeclaration
      PrivateKeyword
      Identifier: ' x'
      NumberKeyword
  ClassDeclaration
    Identifier: ' C2'
    PropertyDeclaration
      PrivateKeyword
      Identifier: ' x'
      NumberKeyword
  InterfaceDeclaration
    Identifier: ' A'
    HeritageClause
      ExpressionWithTypeArguments
        Identifier: ' C'
      ExpressionWithTypeArguments
        Identifier: ' C2'
    PropertySignature
      Identifier: ' // error
    y'
      StringKeyword
